establish mongo connection for data